# Hydraulics-Channel-GVF

./: CMakeLists.txt  README.md  hydraulics-channel-gvf-win32.nsi  hydraulics-channel-gvf-win64.nsi  hydraulics_channel_gvf.cpp  hydraulics_channel_gvf.h  hydraulics_channel_gvf.ui  io.github.hafmed.Hydraulics-Channel-GVF.desktop  io.github.hafmed.Hydraulics-Channel-GVF.metainfo.xml  io.github.hafmed.Hydraulics-Channel-GVF.yaml  main.cpp  qtresource.qrc
android-sources/: AndroidManifest.xml  build.gradle
translations/: qt_en.qm  qt_en.ts
